<resources>
    <string name="km">km</string>
    <string name="kcal">kcal</string>
    <string name="open_bluetooth_device">Enable Bluetooth on your Android device</string>
    <string name="sleeps_hint_text">SLEEP TIME</string>
    <string name="sleeps_hint_hours">h</string>
    <string name="sleeps_hint_mins">min</string>
    <string name="goal">Goal</string>
    <string name="awake_time">Awake for</string>
    <string name="sleep_time">Fell Asleep in</string>
    <string name="awake_times">AWAKE</string>
    <string name="total_bed_time">Total sleep</string>
    <string name="times">times</string>
    <string name="bar_title_steps">STEPS</string>
    <string name="bar_title_distance">DISTANCE </string>
    <string name="bar_title_calories">CALORIES</string>
    <string name="bar_title_sleep">SLEEP</string>
    <string name="bar_goal">Goal</string>
    <string name="today">TODAY</string>
    <string name="today1">today</string>
    <string name="week">Week</string>
    <string name="months">Month</string>
    <string name="top_day">DAY</string>
    <string name="top_week">Week</string>
    <string name="top_month">Month</string>
    <string name="Yesterday">yesterday</string>
    <string name="goals_title">Goals</string>
    <string name="my_daily_goals">MY DAILY GOALS</string>
    <string name="my_daily_steps">STEPS</string>
    <string name="my_daily_distance">DISTANCE</string>
    <string name="my_daily_calories">CALORIES</string>
    <string name="my_daily_sleep">SLEEP</string>
    <string name="daily_goal">DAILY GOAL</string>
    <string name="reminds_title">Reminders</string>
    <string name="steps">steps</string>
    <string name="steps1">steps</string>
    <string name="remind_time">Time</string>
    <string name="repeat">Custom Repeat</string>
    <string name="sport">Sport</string>
    <string name="sleep">Sleep</string>
    <string name="eat">Eat</string>
    <string name="medicine">Medicine</string>
     <string name="defined">Defined</string>
    <string name="note_type_no">Please select reminder type</string>
    <string name="select_day_no">Select the day you want the reminder to repeat</string>
    <string name="notes_max_20">No more than 20 reminders</string>
    <string name="every_day">Everyday</string>
    <string name="sunday">Sun</string>
    <string name="saturday">Sat</string>
    <string name="friday">Fri</string>
    <string name="thursday">Thu</string>
    <string name="wednesday">Wed</string>
    <string name="tuesday">Tues</string>
    <string name="monday">Mon</string>
    <string name="wake_up">Wake up</string>
    <string name="reminder_mon">Mon</string>
    <string name="reminder_tues">Tues</string>
    <string name="reminder_wed">Wed</string>
    <string name="reminder_thu">Thu</string>
    <string name="reminder_fri">Fri</string>
    <string name="reminder_sat">Sat</string>
    <string name="reminder_sun">Sun</string>
    <string name="reminder_save">Save</string>
    <string name="reminder_edit">Edit</string>
    <string name="reminder_done">Save</string>
    <string name="settings_title">Settings</string>
    <string name="setting_lang">Language</string>
    <string name="base_setting">MY PROFILE</string>
    <string name="base_setting1">My Profile</string>
    <string name="notification">NOTIFICATIONS</string>
    <string name="notification1">Notifications</string>
    <string name="advanced_setting">ADVANCED SETTINGS</string>
    <string name="advanced_setting1">Advanced Settings</string>
    <string name="help">HELP</string>
    <string name="help1">Help</string>
    <string name="set_up_device">CONNECT L28T</string>
    <string name="set_up_device1">Connect L28T</string>
    <string name="sleep_goal">Goal</string>
    <string name="logout">LOG OUT</string>
    <string name="OK">Ok</string>
    <string name="sex">Gender</string>
    <string name="date_of_birth">Birthday</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="zefit_version"> App Version</string>
    <string name="time_hour">hours</string>
    <string name="pedometer">LeFit</string>
    <string name="remove">UNPAIR L28T</string>
    <string name="remove_hint">UnPair L28T</string>
    <string name="turn_on_bluetooth_content">Enable Bluetooth on your Android device</string>
    <string name="next">NEXT</string>
    <string name="device_searching">SET UP</string>
    <string name="binddevice">CONNECT L28T</string>
    <string name="about_app_title">ABOUT US</string>
    <string name="btn_reg">SIGN UP</string>
    <string name="btn_login">LOG IN</string>
    <string name="reg_username">Username</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_male">Male</string>
    <string name="reg_female">Female</string>
    <string name="reg_height">Height</string>
    <string name="reg_weight">Weight</string>
    <string name="reg_birthday">Birthday</string>
    <string name="reg_username_null">Must input username</string>
    <string name="reg_email_null">Must input email address</string>
    <string name="reg_password_null">Must input password</string>
    <string name="reg_gender_null">Please choose gender</string>
    <string name="reg_height_null">Must input height</string>
    <string name="reg_weight_null">Must input weight</string>
    <string name="reg_birthday_null">Must input birthdate</string>
    <string name="reg_email_wrong">Wrong email format</string>
    <string name="login_loading">Loading</string>
    <string name="login_username_wrong">wrong username or password.</string>
    <string name="login_forgot_password">FORGOT YOUR PASSWORD?</string>
    <string name="password_length">Please input password between 6 to 16 character</string>
    <string name="email_exist">Email address already in use</string>
    <string name="nickname_exist">Username already in use</string>
    <string name="reset_password">RESET MY PASSWORD</string>
    <string name="changepassword">Change Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="inputoldpassword">Must input old password</string>
    <string name="inputnewpassword">Must input new password</string>
    <string name="inputrepeatedpassword">Must input repeated password</string>
    <string name="oldincorrect">The old password is incorrect</string>
    <string name="notconformity">The password is not conformity with the one you input just now</string>
    <string name="revisedsuccessfully">Revised successfully</string>
    <string name="country">Country</string>
    <string name="timeformat">Time Format</string>
    <string name="hour12">12-Hour</string>
    <string name="hour24">24-Hour</string>
    <string name="cent_kilometers">Centimeters,Kilometers</string>
    <string name="feetmiles">miles</string>
    <string name="kilograms">Kilograms</string>
    <string name="pounds">Pounds</string>
    <string name="success">Successful</string>
    <string name="tips">Information</string>
    <string name="light_sleep">Light Sleep</string>
    <string name="deep_sleep">Deep sleep</string>
    <string name="remindertips1">You can set up to 6 daily reminders:</string>
    <string name="remindertips2">Choose the type of reminder</string>
    <string name="remindertips3">Enter the preferred time and day</string>
    <string name="remindertips4">Once the reminder time is reached, L28T will gently vibrate and display the corresponding icon to alert you</string>
    <string name="sports_title">Activity</string>
    <string name="app_name">LeFit</string>
    <string name="loading">connect</string>
    <string name="loading_setting">The data set, please wait...</string>
    <string name="no_found_device">Did not find the Bluetooth device!</string>
    <string name="program_exception">program exception</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="login_username_exist">Account name does not exist,please re-enter!</string>
    <string name="send_email_failed">Failed to send email and try again!</string>
    <string name="setting_success">Successful</string>
    <string name="setting_failed">failed!</string>
    <string name="press_again_exit">press again exit</string>
    <string name="note_time_same">Time can\'t repeat!</string>
    <string name="no_more_data">No more data</string>
    <string name="os_hint_title">Warning</string>
    <string name="os_hint_content">Android4.3 and above，This system is：</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="today_steps1">You have reached </string>
    <string name="today_steps2">of your daily goals</string>
    <string name="get_sports_data_break_off">Obtain detailed data received motion interrupt,please re acquisition, to prevent data loss</string>
    <string name="Cancel">Cancel</string>
    <string name="update_firmware_website">http://ledong.fashioncomm.com/download/pc</string>
    <string name="app_version">L28T App Version</string>
    <string name="make_sure_zefit">Make sure L28T is nearby </string>
    <string name="again">TRY AGAIN</string>
    <string name="connect">connect</string>
    <string name="syndata">Syncing!</string>
    <string name="lightuUp"> Please light up the device screen!</string>
    <string name="NetWorkError">Network unavailable,please try again!</string>
    <string name="ZefitAlreadyBind"> L28T is already connected to another account!</string>
    <string name="contactsupport">Contact support</string>
    <string name="NotAllowSameTypeBind"> Not Allow binding  SameType Watch!!</string>
    <string name="ServerBusy">Server busy, please try again!</string>
    <string name="synPedometer">Synchronize to L28T? </string>
    <string name="push_callAndSms">NOTIFICATIONS</string>
    <string name="IncomingCall">Incoming Call</string>
    <string name="IncomingSMS">SMS</string>
    <string name="push_callAndSms2">Notifications</string>
    <string name="upload_sportdata_fail">Upload SportData Fail!</string>
    <string name="upload_Sleepdata_fail">Upload SleepData Fail!</string>
    <string name="download_sportdata_fail">Download SportData Fail!</string>
    <string name="download_sleepdata_fail">Download SleepData Fail!</string>
    <string name="download_clouddata_fail">Download CloudData Fail, Please Retry!</string>
    <string name="need_upload_data">Exit Now?</string>
    <string name="Notifications">Notifications</string>
    <string name="NOTIFICATIONS">NOTIFICATIONS</string>
    <string name="binding_select_devices">SELECT L28T IN THE LIST OF DEVICES</string>
    <string name="binding_select_accessory">Select An Accessory</string>
    <string name="SetUpFailed">PAIRING FAILED</string>
    <string name="SuccessfulSetUp">SUCCESSFUL PAIRING</string>
    <string name="binding_unpair">UNPAIR L28T</string>
    <string name="sleep_title">Sleep</string>
    <string name="notice_item">NOTIFICATIONS</string>
    <string name="notice_title">Notifications</string>
    <string name="notice_sms">SMS</string>
    <string name="notice_email">E-MAIL</string>
    <string name="notice_social">SOCIAL MEDIA</string>
    <string name="notice_event">CALENDAR EVENT</string>
    <string name="notice_anti_lost">ANTI-LOST</string>
    <string name="notice_calls">CALLS</string>
    <string name="notice_missed_calls">MISSED CALLS</string>
    <string name="setting_connet_zecircle">CONNECT L28T</string>
    <string name="repeatedpassword">Repeat New Password</string>
    <string name="adseting_clocktype_item">CLOCK TYPE</string>
    <string name="adseting_clocktype_title">Clock type</string>
    <string name="adseting_presetsleep_item">PRESET SLEEP</string>
    <string name="adseting_presetsleep_title">Preset Sleep</string>
    <string name="adseting_presetsleep_disable">Disable auto sleep</string>
</resources>