<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <!-- topbar 标题显示 -->

    <FrameLayout
        android:id="@+id/pttopbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/title" />

        <!-- 左边的按钮   android:onClick="btn_left_clicked"   -->
        <ImageButton
            android:id="@+id/btn_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="0dip"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/topbtn_rebutn_btn_selector"
            android:onClick="btn_return_clicked"        
            android:visibility="visible" />
        
        <!-- 右边的按钮 android:onClick="btn_right_clicked"  -->
        <TextView
            android:id="@+id/btn_right"
            android:layout_width="50dip"
            android:layout_height="45dip"
            android:layout_marginTop="0dip"
            android:layout_gravity="right|center_vertical"
            android:gravity="center"
            android:layout_marginRight="5dip"
            android:text="@string/reminder_save"
            android:textSize="16dip"
            android:textColor="#ffffff"   
            android:visibility="visible" />
        
    </FrameLayout>
    
<TextView 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="20dip"
    	android:gravity="left"
    	android:paddingTop="8dp"
    	android:paddingLeft="8dp"
    	android:paddingRight="8dp"
        android:text="@string/remind_time"
        android:textSize="16sp"
        android:textStyle="bold" 
        android:visibility="gone"
        />
    
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" 
        android:orientation="horizontal"
        android:background="#F9FBFA"
        android:id="@+id/layout_sleep_goal"
        >        
        <TextView 
            android:layout_width="fill_parent"
        	android:layout_height="40dip"      	
        	android:layout_marginTop="0dip"
        	android:layout_marginLeft="0dip"
        	android:layout_gravity="center_horizontal|center_vertical"
        	android:gravity="center"
        	android:textSize="22sp"
            android:text="00:00"
            android:id="@+id/textview_time"
            />
        
         <ImageButton
            android:id="@+id/btn_edit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="15dip"
            android:background="@drawable/btn_edit_time_selector" 
            android:onClick="btn_edit_time_clicked"      
            android:visibility="gone" />
    </FrameLayout>
    
    
    <TextView 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="10dip"
    	android:gravity="left"
    	android:padding="8dp"
        android:text="@string/reminds_title"
        android:textSize="16sp"
        android:textStyle="bold" 
        />
    
    <LinearLayout
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="#fff"
        android:orientation="vertical" >     
	    <RadioGroup
	        android:id="@+id/radiogroup"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="3dip"
	        android:layout_marginBottom="0dip"
	        android:orientation="horizontal" >
	
	        <RadioButton
	            android:id="@+id/radiobutton1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:button="@null"
	            android:checked="false"
	            android:drawableTop="@drawable/rb_sport_selector"
	            android:gravity="center"
	            android:text="@string/sport"
	            android:textSize="10dip" />
	
	        <RadioButton
	            android:id="@+id/radiobutton2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:drawableTop="@drawable/rb_sleep_selector"
	            android:background="#fff"
	            android:button="@null"
	            android:gravity="center|top"
	            android:text="@string/sleep"
	            android:textSize="10dip"
	            />
	        <RadioButton
	            android:id="@+id/radiobutton3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:drawableTop="@drawable/rb_eat_selector"
	            android:background="#fff"
	            android:button="@null"
	            android:gravity="center"
	            android:text="@string/eat"
	            android:textSize="10dip"
	            />
	        <RadioButton
	            android:id="@+id/radiobutton4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:drawableTop="@drawable/rb_medicine_selector"
	            android:background="#fff"
	            android:button="@null"
	            android:gravity="center"
	            android:text="@string/medicine"
	            android:textSize="10dip" 
	            />
	        <RadioButton
	            android:id="@+id/radiobutton5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:drawableTop="@drawable/rb_wake_up_selector"
	            android:background="#fff"
	            android:button="@null"
	            android:gravity="center"
	            android:text="@string/wake_up" 
	            android:textSize="10dip"
	            />
	        <RadioButton
	            android:id="@+id/radiobutton6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:drawableTop="@drawable/rb_defined_selector"
	            android:background="#fff"
	            android:button="@null"
	            android:gravity="center"
	            android:text="@string/defined"
	            android:textSize="10dip"
	            />
	    </RadioGroup>
	   
    	<LinearLayout
			android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="#fff"
	        android:gravity="center"
	        android:orientation="horizontal"
	        android:visibility="gone" >
	        
	        <TextView
	            android:layout_width="49dip"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="5dip"
	            android:layout_marginLeft="20dip"
	            android:text="@string/sport"
	            android:textColor="#000000"
	            android:textSize="10sp" />

	        <TextView
	            android:layout_width="49dip"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="5dip"
	            android:text="@string/sleep"
	            android:textColor="#000000"
	            android:textSize="10sp" />

	        <TextView
	            android:layout_width="49dip"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="5dip"
	            android:text="@string/eat"
	            android:textColor="#000000"
	            android:textSize="10sp" />

	        <TextView
	            android:layout_width="49dip"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="5dip"
	            android:text="@string/medicine"
	            android:textColor="#000000"
	            android:textSize="10sp" />

	        <TextView
	            android:layout_width="49dip"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="5dip"
	            android:text="@string/wake_up"
	            android:textColor="#000000"
	            android:textSize="10sp" />
	        
	        <TextView
	            android:layout_width="49dip"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="5dip"
	            android:text="@string/defined"
	            android:textColor="#000000"
	            android:textSize="10sp" />

        </LinearLayout>
	</LinearLayout>
    
    <TextView 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="30dip"
    	android:gravity="left"
    	android:paddingLeft="8dp"
    	android:paddingRight="8dp"
        android:textSize="16sp"
        android:textStyle="bold" 
        android:visibility="gone"
        />
    <!--  android:text="@string/add_note" -->
    <EditText 
        android:layout_width="fill_parent"
    	android:layout_height="80dip"
    	android:layout_marginTop="10dip"
    	android:layout_marginLeft="10dip"
    	android:layout_marginRight="10dip"
    	android:gravity="left"
    	android:padding="8dp"
        android:textColor="#000"
        android:textSize="16sp"
        android:id="@+id/edittext"
        android:visibility="gone"
        />
    
    <LinearLayout
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:background="@drawable/line"
        android:visibility="gone"
        /> 
    
    <TextView 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="10dip"
    	android:gravity="left"
    	android:padding="8dp"
        android:text="@string/repeat"
        android:textSize="16sp"
        android:textStyle="bold" 
        />
	<HorizontalScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >   
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp" 
	        android:orientation="horizontal"
	        android:gravity="center" 
	        android:id="@+id/layout_3"
	        >        
	        <ToggleButton   
		        android:layout_width="45dip"  
		        android:layout_height="40dip"
				android:textOn="@string/reminder_mon"
				android:textOff="@string/reminder_mon"
		        android:background="@drawable/toggle_week_selector"
		        android:textSize="10dip"
		        android:textColor="#fff"
		        android:id="@+id/togglebutton_time1"
		        /> 
	        <ToggleButton   
		        android:layout_width="45dip"  
		        android:layout_height="40dip"
				android:textOn="@string/reminder_tues"
				android:textOff="@string/reminder_tues"
				android:layout_marginLeft="0dip"
		        android:background="@drawable/toggle_week_selector"
		        android:textSize="10dip"
		        android:textColor="#fff"
		        android:id="@+id/togglebutton_time2"
		        /> 
	        <ToggleButton   
		        android:layout_width="45dip"  
		        android:layout_height="40dip"
				android:textOn="@string/reminder_wed"
				android:textOff="@string/reminder_wed"
				android:layout_marginLeft="0dip"
		        android:background="@drawable/toggle_week_selector"
		        android:textSize="10dip"
		        android:textColor="#fff"
		        android:id="@+id/togglebutton_time3"
		        /> 
	        <ToggleButton   
		        android:layout_width="45dip"  
		        android:layout_height="40dip"
				android:textOn="@string/reminder_thu"
				android:textOff="@string/reminder_thu"
				android:layout_marginLeft="0dip"
		        android:background="@drawable/toggle_week_selector"
		        android:textSize="10dip"
		        android:textColor="#fff"
		        android:id="@+id/togglebutton_time4"
		        /> 
	        <ToggleButton   
		        android:layout_width="45dip"  
		        android:layout_height="40dip"
				android:textOn="@string/reminder_fri"
				android:textOff="@string/reminder_fri"
				android:layout_marginLeft="0dip"
		        android:background="@drawable/toggle_week_selector"
		        android:textSize="10dip"
		        android:textColor="#fff"
		        android:id="@+id/togglebutton_time5"
		        /> 
	        <ToggleButton   
		        android:layout_width="45dip"  
		        android:layout_height="40dip"
				android:textOn="@string/reminder_sat"
				android:textOff="@string/reminder_sat"
				android:layout_marginLeft="0dip"
		        android:background="@drawable/toggle_week_selector"
		        android:textSize="10dip"
		        android:textColor="#fff"
		        android:id="@+id/togglebutton_time6"
		        /> 
	        <ToggleButton   
		        android:layout_width="45dip"  
		        android:layout_height="40dip"
				android:textOn="@string/reminder_sun"
				android:textOff="@string/reminder_sun"
				android:layout_marginLeft="0dip"
		        android:background="@drawable/toggle_week_selector"
		        android:textSize="10dip"
		        android:textColor="#fff"
		        android:id="@+id/togglebutton_time7"
		        /> 
	         
	    </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>
